--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ nav {
   background-color: black !important;
 }
 
-img {
+.navbarLogo {
   height: 100px;
   width: 100px;
   border-radius: 300px;
@@ -33,10 +33,119 @@ img {
 }
 /* End */
 
+/* First picture and paragraph styling */
+/* Media query on desktop view */
+@media (min-width: 992px) {
+  .firstPicture {
+    max-height: 500px !important;
+    width: 100% !important;
+  }
+    .firstParagraphExtraSpace {
+      margin-top: 290px !important;
+    }
+    .firstParagraph span, .contactUsParagraph {
+      font-size: 35px;
+    }
+}
+
+.firstParagraph, .contactUsParagraph {
+  font-family: 'Outfit', sans-serif;
+  font-weight: bold;
+}
+/* End */
+
 /* Our Menu Styling */
 .ourMenu {
   height: 60px;
   background-color: black !important;
 }
+/* End */
 
+/* Testimonials styles */
+.testimonialsHeader, .testimonialsSubtext, .contactUsHeader {
+  font-family: 'Outfit', sans-serif;
+  text-align: center;
+}
+
+.testimonialsHeader, .contactUsHeader {
+  font-weight: bold !important;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  -webkit-text-stroke: 2px black;
+  color: black;
+  font-size: 25px;
+}
+
+.testimonialsSubtext {
+  font-size: 35px;
+  font-weight: bold !important;
+  margin-bottom: 50px;
+}
+
+.testimonialCards {
+  background-color: black !important;
+}
+
+.card-body h3 {
+  color: white !important;
+  text-align: center !important;
+  padding-top: 60px;
+}
+
+.card-text {
+  text-align: center !important;
+  color: white !important;
+}
+
+/* Testimony image */
+.card img {
+  position: absolute;
+  top: -35px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 1000px !important;
+  height: 100px;
+  width: 100px;
+  filter: grayscale(100%) brightness(120%);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: black;
+  position: relative;
+  height: 100%;
+}
+
+.row, .gutters {
+  display: flex;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-img-top {
+  opacity: 0.7;
+}
+/*  End */
+
+/* Contact Us Styling */
+.contactUsText {
+  font-family: 'Outfit', sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.btn {
+  margin-top: 50px;
+  background-color: black;
+  border-radius: 100px;
+  height: 60px;
+  width: 320px;
+}
 /* End */
